[tool.poetry]
name = "course-stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Didac Fortuny <didac.fortuny@adevinta.com>"]
readme = "README.md"
packages = [{include = "course_stable_diffusion"}]

[tool.poetry.dependencies]
python = "^3.8"
diffusers = "^0.18.2"
accelerate = "^0.21.0"
transformers = "^4.31.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.3"
ipywidgets = "^8.0.7"
jupytext = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
